FIX footer display on mobile

--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -189,7 +189,7 @@ table {
 */
 
 #no-recipes.hidden {
-  display:none;
+  display: none;
 }
 
 #recipe {
@@ -357,11 +357,13 @@ footer {
 
 .footer-author {
   margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%)
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-author a {
